* Tweaked a few z-indexes to fix some overlapping issues
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@17725 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenModel/skins/zenmodel/zenoss.css
+++ b/Products/ZenModel/skins/zenmodel/zenoss.css
@@ -66,7 +66,7 @@ input,textarea {
     left: 0px;
     border-right: 1px solid black;
     cursor: pointer;
-    z-index: 3000;
+    z-index: 4000;
     width: 115px;
     /*background: #5a6f8f url('img/titlebar_bg.gif') top left repeat-x;*/
     background: transparent url('img/leftpanetoggle_bg_expanded.gif') 
@@ -724,7 +724,7 @@ a.tablevalues:active {
     height: 20px;
     width: 115px;
     border-right: 1px solid black;
-    z-index: 1000;
+    z-index: 4000;
     cursor: pointer;
     background: transparent url('img/paneToggle_bg.gif') top left no-repeat;
 }
