--- a/Products/ZenWidgets/skins/zenui/css/menus.css
+++ b/Products/ZenWidgets/skins/zenui/css/menus.css
@@ -46,7 +46,7 @@
     width: 172px;
     top: 24px;
     border-top: 0px;
-    z-index: 3005;
+    z-index: 4005;
     padding-bottom: 10px;
     padding-top: 10px;
 }
